--- a/sprint-one/SpecRunner.html
+++ b/sprint-one/SpecRunner.html
@@ -9,7 +9,7 @@
         padding: 0;
       }
       iframe {
-        width: 100%;
+        width: 20%;
         border-width: 0;
       }
     </style>
@@ -17,8 +17,7 @@
     <script src="../lib/underscore/underscore.js"></script>
     <script>
       $(function() {
-        // $.each(['functional', 'functional-shared', 'prototypal', 'pseudoclassical', 'es6'], function(i, variant) {
-        $.each(['functional'], function(i, variant) {
+        $.each(['functional', 'functional-shared', 'prototypal', 'pseudoclassical', 'es6'], function(i, variant) {
 
           $('<iframe src="' + window.location.toString().replace('.html', 'Section.html?') + variant + '" />').appendTo(document.body);
         });
